removed unneeded code

--- a/columnchart.html
+++ b/columnchart.html
@@ -7,17 +7,10 @@
 
         <title>Exchange Rate Chart</title>
         <style>
-			body { font-family: sans-serif; color: #444444; }
-			.column-chart, .bar-chart, .scatter-plot { margin: 20px; border: 1px solid #3498db; }
-            .scatter-plot, .column-chart { height: 500px; }
-			.bar-chart.stacked [data-cp-size] { min-height: 0.655em; }
-			.bar-chart [data-cp-size],
-			.bar-chart.stacked .pad [data-cp-size] { min-height: 0.8em; }
-			.pad ul [data-cp-size] { padding: 8px; }
-			a { color: #3498db; text-decoration: none; }
-			.plot-container li:hover { opacity: 0.8; }
-			img.github { position: absolute; top: 0; right: 0; }
-            li { list-style: none; }
+
+			.column-chart { margin: 20px; border: 1px solid #3498db; }
+            .column-chart { height: 500px; }
+
 		</style>
 
     </head>
