cleaned up code and renamed stuff

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Exchange Rate Chart</h2>
     <div>
         <div class="column-chart">
-            <ul class="plot-container">
+            <ul class="chart-container">
                 <li onclick="alert('EUR costs 1.00 EUR')" class="chart-column" style="height: 50.0%">EUR</li>
                 <li onclick="alert('USD costs 0.926 EUR')" class="chart-column" style="height: 46.3%">USD</li>
                 <li onclick="alert('AUD costs 0.594 EUR')" class="chart-column" style="height: 29.7%">AUD</li>
